# star_fc

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: gps.rs  main.rs
