[package]
name = "starfc"
version = "0.1.0"
edition = "2021"

[dependencies]
feather_m0 = { version = "0.12.1", features = ["rtic", "unproven"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
defmt = "0.3.3"
defmt-rtt = "0.4.0"
systick-monotonic = "1.0.1"
mpu6050 = "0.1.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 2
panic = "abort"
